# chromium_parser

./: .gitignore  CMakeLists.txt  Cmakepresets.json  README.md  vcpkg.json
examples/: 01_quickstart.cpp  02_limits.cpp  03_export.cpp  04_cache_hunt.cpp  05_ioc_url.cpp  06_account_enum.cpp  07_discovery.cpp
include/chromium_parser/: discover.h  profile.h
src/: capture.cpp  discover.cpp  dump.cpp  internal.h  readers_cache.cpp  readers_proto.cpp  readers_sqlite.cpp  readers_sysprofile.cpp  store_copy.cpp
